# robot-agent-runtime-kernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: 01-philosophy.md  02-architecture.md  03-ecosystem.md  04-roadmap.md
docs/en/: 01-philosophy.md  02-architecture.md  03-ecosystem.md  04-roadmap.md
docs/zh/: 01-philosophy.md  02-architecture.md  03-ecosystem.md  04-roadmap.md
rark/: __init__.py  server.py
rark/core/: events.py  kernel.py  runner.py  scheduler.py  task.py  transitions.py
rark/examples/: interrupt_demo.py  llm_demo.py  server_demo.py
rark/persistence/: sqlite_store.py
rark/tests/: test_kernel.py  test_runner.py  test_server.py  test_task.py
