[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rark"
version = "0.1.0"
description = "Robot Agent Runtime Kernel — the missing execution layer between your LLM and your robot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["aiosqlite"]
keywords = ["robotics", "llm", "task-scheduling", "embodied-ai", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/cidxb/robot-agent-runtime-kernel.git"
Documentation = "https://github.com/cidxb/robot-agent-runtime-kernel.git/tree/main/docs"
Repository = "https://github.com/cidxb/robot-agent-runtime-kernel.git"
"Bug Tracker" = "https://github.com/cidxb/robot-agent-runtime-kernel.git/issues"
Changelog = "https://github.com/cidxb/robot-agent-runtime-kernel.git/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev    = ["pytest", "pytest-asyncio", "httpx"]
server = ["fastapi", "uvicorn[standard]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["rark/tests"]
